# dummy_console_app

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
